# pylive-qa-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ENGINEERING_NOTES.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  TEST_STRATEGY.md
examples/: pyqt_auto_close_app.py
src/pylive_qa_studio/: __init__.py  __main__.py  cli.py  web_demo.py
src/pylive_qa_studio/core/: analyzer.py  error_explainer.py  execution_policy.py  executor.py  models.py  predictor.py  redaction.py
tests/: test_analyzer.py  test_error_explainer.py  test_execution_policy.py  test_executor.py  test_predictor.py  test_redaction.py  test_web_demo.py
web/: index.html
